20170417/JunYoungJee/ 유저 정보 업데이트 텍스트 수정, 프로파일 이미지 수정 구현 / 지역필터링의 ‘대학별’ 필터링 구현 - 대학별 필터링의 이미지들을 DataCenter에 Array로 저장 및 지역 뷰 컨트롤러에 띄움

--- a/Gori/Info.plist
+++ b/Gori/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>You Can Change Your ProfileImage</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -34,29 +36,25 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleURLSchemes</key>
-            <array>
-<!--                <string>fb670055479855717</string>-->
-                <string>fb800848553396368</string>
-            </array>
-        </dict>
-    </array>
-    <key>FacebookAppID</key>
-<!--    <string>670055479855717</string>-->
-    <string>800848553396368</string>
-    <key>FacebookDisplayName</key>
-<!--    <string>com.fornew21c.Gori</string>-->
-    <string>fc-OAuth-login</string>
-
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-        <string>fbapi</string>
-        <string>fb-messenger-api</string>
-        <string>fbauth2</string>
-        <string>fbshareextension</string>
-    </array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb800848553396368</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>800848553396368</string>
+	<key>FacebookDisplayName</key>
+	<string>fc-OAuth-login</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 </dict>
 </plist>
