--- a/locations.plist
+++ b/locations.plist
@@ -82,5 +82,77 @@
 		<key>longitude</key>
 		<integer>0</integer>
 	</dict>
+	<dict>
+		<key>location</key>
+		<string>고려대</string>
+		<key>latitude</key>
+		<real>37.590799</real>
+		<key>longitude</key>
+		<real>127.0277773</real>
+	</dict>
+	<dict>
+		<key>location</key>
+		<string>서울대</string>
+		<key>latitude</key>
+		<string>37.459882</string>
+		<key>longitude</key>
+		<string>126.95190530000002</string>
+	</dict>
+	<dict>
+		<key>location</key>
+		<string>연세대</string>
+		<key>latitude</key>
+		<string>37.565784</string>
+		<key>longitude</key>
+		<string>126.93857200000002</string>
+	</dict>
+	<dict>
+		<key>location</key>
+		<string>홍익대</string>
+		<key>latitude</key>
+		<string>37.5517109</string>
+		<key>longitude</key>
+		<string>126.92611569999997</string>
+	</dict>
+	<dict>
+		<key>location</key>
+		<string>이화여대</string>
+		<key>latitude</key>
+		<string>37.5618577</string>
+		<key>longitude</key>
+		<string>126.94682940000007</string>
+	</dict>
+	<dict>
+		<key>location</key>
+		<string>부산대</string>
+		<key>latitude</key>
+		<string>35.23369479999999</string>
+		<key>longitude</key>
+		<string>129.0797639</string>
+	</dict>
+	<dict>
+		<key>location</key>
+		<string>중앙대</string>
+		<key>latitude</key>
+		<string>37.504147</string>
+		<key>longitude</key>
+		<string>126.956954</string>
+	</dict>
+	<dict>
+		<key>location</key>
+		<string>건국대</string>
+		<key>latitude</key>
+		<string>37.5407625</string>
+		<key>longitude</key>
+		<string>127.07934279999995</string>
+	</dict>
+	<dict>
+		<key>location</key>
+		<string>한양대</string>
+		<key>latitude</key>
+		<string>37.5572321</string>
+		<key>longitude</key>
+		<string>127.04532189999998</string>
+	</dict>
 </array>
 </plist>
